--- a/playbookPuppetMain.yml
+++ b/playbookPuppetMain.yml
@@ -4,8 +4,31 @@
   hosts: PuppetServer
   become: yes
   vars:
+          puppet_server_deb: https://apt.puppetlabs.com/puppetlabs-release-pc1-trusty.deb
           dest_puppet_conf: /etc/puppetlabs/puppet/puppet.conf
   tasks:
+          - name: Download deb package(puppet-server)
+            apt:
+                  deb: '{{ puppet_server_deb }}'
+
+          - name: Add in system
+            apt:
+                  deb: puppetlabs-release-pc1-trusty.deb
+
+          - name: Update
+            apt:
+                  update_cache: yes
+
+          - name: Install puppet-server
+            apt:  
+                  name: puppetserver
+                  state: latest  
+          
+          - name: Start PuppetServer and enable it on the every boot
+            service:
+                  name: puppetserver
+                  state: started
+                  enabled: yes        
 
           - lineinfile:
                   dest: '{{ dest_puppet_conf }}'
