--- a/rezult.yml
+++ b/rezult.yml
@@ -1,5 +1,5 @@
 
-PLAY [Add group(MAIN) in Puppet Config file] **********************************************************************
+PLAY [Deployment PuppetServer and PuppetAgents] **********************************************************************
 
 TASK [Gathering Facts] ********************************************************************************************
 ok: [ubuntuserver]
